--- a/src/Cloth/Seller/SellerGUI.form
+++ b/src/Cloth/Seller/SellerGUI.form
@@ -101,11 +101,13 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="serviceSelector">
       <Properties>
         <Property name="text" type="java.lang.String" value="Select"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
   </SubComponents>
