--- a/src/Cloth/Seller/SellerGUI.form
+++ b/src/Cloth/Seller/SellerGUI.form
@@ -109,6 +109,9 @@
         <Property name="text" type="java.lang.String" value="Select"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="serviceSelectorActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
