--- a/src/Cloth/Customer/ClothDiscription.form
+++ b/src/Cloth/Customer/ClothDiscription.form
@@ -41,8 +41,8 @@
                       </Group>
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="color" pref="97" max="32767" attributes="0"/>
-                          <Component id="quantity" max="32767" attributes="0"/>
+                          <Component id="colorr" pref="97" max="32767" attributes="0"/>
+                          <Component id="quantityy" max="32767" attributes="0"/>
                           <Component id="typee" max="32767" attributes="0"/>
                           <Component id="namee" max="32767" attributes="0"/>
                           <Component id="pricee" max="32767" attributes="0"/>
@@ -80,11 +80,11 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                  <Component id="quantity" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="quantityy" min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="color" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="colorr" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -122,7 +122,7 @@
         <Property name="text" type="java.lang.String" value="Color"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="color">
+    <Component class="javax.swing.JComboBox" name="colorr">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="5">
@@ -135,13 +135,13 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="colorActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="colorrActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JSpinner" name="quantity">
+    <Component class="javax.swing.JSpinner" name="quantityy">
       <Properties>
         <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-          <SpinnerModel initial="0" maximum="10" minimum="0" numberType="java.lang.Integer" stepSize="1" type="number"/>
+          <SpinnerModel initial="1" maximum="10" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
         </Property>
       </Properties>
     </Component>
